# portal

./: .dockerignore  .env.example  .gitignore  CHANGES.md  CLAUDE.md  CONTROLWEB.md  Makefile  README.md  TODO.md  dev_server.py  docker-compose.yml  main.py  pyproject.toml  run-dev.sh  run_dev.py
ChatHistoryAnalyst/: .dockerignore  .env.example  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  import_knowledge.py  pyproject.toml
ChatHistoryAnalyst/.claude/: settings.local.json
ChatHistoryAnalyst/.streamlit/: config.toml
ChatHistoryAnalyst/data/: DBL.txt  communication.txt  deeprelation.txt  imitate.txt  relationship.txt
ChatHistoryAnalyst/docs/: rag-roadmap.md  如何导入正确格式.md
ChatHistoryAnalyst/front/: frontend.py
ChatHistoryAnalyst/src/: context_engineer.py  core_llm.py  main.py  rag_function.py  schemas.py  tools.py
MakeItSmooth/: CAPABILITIES.md  CLAUDE.md  Dockerfile  PROGRESS.md  TODO.md  app.py  boundary.md  config.py  docker-compose.yml  pyproject.toml  requirements.txt
MakeItSmooth/.claude/: settings.local.json
MakeItSmooth/core/: __init__.py  agent.py  context_engine.py  graph.py  llm_client.py  router.py
MakeItSmooth/docs/: context-engineering-guide.md  three-layer-rag.md  tool-loop-prevention.md
MakeItSmooth/memory/: __init__.py
MakeItSmooth/models/: __init__.py  schemas.py
MakeItSmooth/prompts/: system_prompts.py  templates.py
MakeItSmooth/routers/: __init__.py  chat.py  knowledge.py  sessions.py
MakeItSmooth/services/: md_export.py  rag_service.py  session_store.py  vector_store.py
MakeItSmooth/skills/: __init__.py  base.py  info_retention.py  work_arranger.py
MakeItSmooth/static/: index.html
MakeItSpecific/: .dockerignore  CAPABILITIES.md  CLAUDE.md  Dockerfile  GOVERNANCE.md  PROGRESS.md  README.md  TODO.md  app.py  boundary.md  config.py  docker-compose.yml  inf.txt  pyproject.toml  requirements.txt
(+83 files in other folders)
