[project]
name = "chathistoryanalyst"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dashscope>=1.25.18",
    "fastapi>=0.136.1",
    "langchain>=1.3.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.2.1",
    "langchain-postgres[async]>=0.0.17",
    "langchain-tavily>=0.2.18",
    "langchain-text-splitters>=0.3.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "requests>=2.34.1",
    "streamlit>=1.57.0",
    "uvicorn>=0.46.0",
]
